Se cambió el parrafo
Para probar el ejercicio

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hola Mundo</h1>
-    <p>La tortugita</p>   
+    <p>La tortuguita bajo del agua, bajo del agua, bajo del agua</p>   
 </body>
 </html>
 
