El último cambiecito
Bacanirris

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hola Mundo</h1>
-    <p>La tortuguita bajo del agua, bajo del agua, bajo del agua, muy feliz</p>   
+    <p>bajo del agua, bajo del agua, muy feliz</p>   
 </body>
 </html>
 
